fixed wrap on cards

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     border: 1px solid black;
-} */
+}
 
 body {
     margin: 0;
@@ -70,6 +70,7 @@ a {
     align-items: center;
     justify-content: center;
     color: #F9FAF8;
+    background-color: #E5E7Eb;
 }
 
 h2 {
@@ -91,13 +92,6 @@ h5 {
     margin: 0;
 }
 
-.img-1 {
-    display: flex;
-    background-color: #E5E7Eb;
-    text-align: center;
-    justify-content: center;
-}
-
 button {
     background-color: #3882F6;
     border: 2px solid white;
@@ -109,8 +103,7 @@ button {
 .container-2 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding-bottom: 48px;
+    padding: 0px 200px;
 }
 
 h3 {
@@ -122,17 +115,24 @@ h3 {
 .container-2-boxes {
     display: flex;
     justify-content: center;
-    gap: 52px;
-    max-width: 750px;
+    align-items: center;
+    padding-bottom: 24px;
+    flex-wrap: wrap;
+    gap: 4px;
+}
+
+.stack {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
 }
 
 .box {
-    align-content: center;
     width: 150px;
     height: 150px;
     border: 2px solid #3882F6;
     border-radius: 16px;
-    box-sizing: border-box;
 }
 
 .text {
@@ -140,6 +140,7 @@ h3 {
     text-align: center;
     word-wrap: normal;
     flex-wrap: wrap;
+    max-width: 150px;
 }
 
 .container-3 {
